--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,5 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/androidstudio
 
 .idea/codeStyles/Project.xml
+
+.idea/
