PROJ-45 Home Mobile #in-progress

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,22 +18,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".views.PostAnimalActivity">
+        <activity android:name=".views.PostAnimalActivity"/>
+        <activity android:name=".views.SubmRequestActivity" />
+        <activity android:name=".views.AnimalDetailsActivity" />
+        <activity android:name=".OrgDetailActivity" />
+        <activity android:name=".OrganizationActivity" />
+        <activity android:name=".LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.SubmRequestActivity" />
-        <activity android:name=".views.AnimalDetailsActivity" />
-        <activity android:name=".OrgDetailActivity" />
-        <activity android:name=".OrganizationActivity" />
-        <activity android:name=".LoginActivity" />
         <activity android:name=".UserProfileActivity" />
         <activity android:name=".SignupActivity" />
-        <activity android:name=".MainActivity">
-
-        </activity>
 
     </application>
 
