--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,10 @@
         <activity android:name=".views.SubmRequestActivity" />
         <activity android:name=".views.AnimalDetailsActivity" />
         <activity android:name=".OrgDetailActivity" />
-        <activity android:name=".OrganizationActivity" />
+
+        <activity android:name=".views.OrganizationDetailsActivity"
+            android:parentActivityName=".views.MenuMainActivity"/>
+
         <activity android:name=".views.LoginActivity"
             android:parentActivityName=".views.MenuMainActivity"/>
 
