--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,16 +5,10 @@
 
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="false" />
-
-    <!--Permissions for camera usage-->
-    <uses-permission android:name="android.permission.CAMERA" />
-
-    <!--Permissions for location usage-->
+        android:required="false" /> <!-- Permissions for camera usage -->
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- Permissions for location usage -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <!--Permissions for internet access-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- Permissions for internet access -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -25,35 +19,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic = "true"
+        android:usesCleartextTraffic="true"
         tools:targetApi="m">
-
-        <activity android:name=".views.MenuMainActivity"
+        <activity
+            android:name=".views.MenuMainActivity"
             android:label="Paws4adoption"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
-        <activity android:name=".views.PostAnimalActivity"
-            android:parentActivityName=".views.MenuMainActivity"/>
-
+        <activity
+            android:name=".views.PostAnimalActivity"
+            android:parentActivityName=".views.MenuMainActivity" />
         <activity android:name=".views.SubmRequestActivity" />
         <activity android:name=".views.AnimalDetailsActivity" />
         <activity android:name=".OrgDetailActivity" />
-
-        <activity android:name=".views.OrganizationDetailsActivity"
-            android:parentActivityName=".views.MenuMainActivity"/>
-
-        <activity android:name=".views.LoginActivity"
-            android:parentActivityName=".views.MenuMainActivity"/>
-
+        <activity
+            android:name=".views.OrganizationDetailsActivity"
+            android:parentActivityName=".views.MenuMainActivity" />
+        <activity
+            android:name=".views.LoginActivity"
+            android:parentActivityName=".views.MenuMainActivity" />
         <activity android:name=".views.UserProfileActivity" />
         <activity android:name=".views.SignupActivity" />
 
