--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,11 +45,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".views.PostAnimalActivity"
+
+        <activity android:name=".views.PostAnimalActivity"
             android:parentActivityName=".views.MenuMainActivity" />
+
         <activity android:name=".views.SubmRequestActivity" />
-        <activity android:name=".views.AnimalDetailsActivity" />
+
+        <activity android:name=".views.AnimalDetailsActivity"
+            android:parentActivityName=".views.MenuMainActivity"/>
 
         <activity android:name=".views.OrganizationDetailsActivity"
             android:parentActivityName=".views.MenuMainActivity"/>
