--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
+
+    compileOnly 'com.google.android.things:androidthings:1.0'
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
 }
