--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
 
     compileOnly 'com.google.android.things:androidthings:1.0'
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 }
